[package]
name = "mixer_hotkey"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_derive = "1.0.228"
toml = "1.1.2"
windows = { version = "=0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
